--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
         <div class="card" style="border: none;  background-color: transparent;">
           <div class="card-body">
             <div class="logo">
-                <img href="" src="../assets/imgs/STAR.png">
+                <img href="" src="../assets/imgs/titulo.PNG"><br>
+                <img href="" src="../assets/imgs/telefono.PNG">
             </div>
           </div>
         </div>
