--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,9 @@
 .logo {
     text-align: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover cover;
 }
 
 img {
-    height: 70px;
+    height: 35px;
 }
