--- a/src/app/components/cachimbas/cachimbas.component.html
+++ b/src/app/components/cachimbas/cachimbas.component.html
@@ -1,13 +1,15 @@
 <div class="container">
     
     <div>
-        <div style=" text-align: right">
-
-            <h5  style="color: rgb(255, 255, 255); padding: 10px; font-style: italic;"><b>12.00€</b></h5>
-        </div>
+        
         <ul class="list-group cachimbas">
+
             <li class="list-group-item titulo" style="border:none; background-color: white; color: #369;border-top: 3px double #369;
             border-bottom: 3px double #369;" aria-current="true"> <b>· SABORES ·</b></li>
+            <div style=" text-align: center">
+
+                <h5  style="color: rgb(255, 255, 255); padding: 10px;  border-bottom: 1px solid white;"><b>12.00€</b></h5>
+            </div>
             <ol class="list-group list-group-numbered">
 
                 <li class="list-group-item fondoLista" >
@@ -18,6 +20,7 @@
                 </li>
 
             </ol>
+            <hr   />
             <ol class="list-group list-group-numbered">
 
                 <li class="list-group-item fondoLista">
@@ -28,6 +31,7 @@
                 </li>
 
             </ol>
+            <hr   />
             <ol class="list-group list-group-numbered">
 
                 <li class="list-group-item fondoLista">
@@ -38,6 +42,7 @@
                 </li>
 
             </ol>
+            <hr   />
             <ol class="list-group list-group-numbered">
 
                 <li class="list-group-item fondoLista">
@@ -48,6 +53,7 @@
                 </li>
 
             </ol>
+            <hr   />
             <ol class="list-group list-group-numbered">
 
                 <li class="list-group-item fondoLista" >
@@ -58,6 +64,7 @@
                 </li>
 
             </ol>
+            <hr   />
             <ol class="list-group list-group-numbered">
 
                 <li class="list-group-item fondoLista" >
@@ -68,6 +75,7 @@
                 </li>
 
             </ol>
+            <hr   />
             <ol class="list-group list-group-numbered">
 
                 <li class="list-group-item fondoLista" >
@@ -78,6 +86,7 @@
                 </li>
 
             </ol>
+            <hr   />
             <ol class="list-group list-group-numbered">
 
                 <li class="list-group-item fondoLista" >
@@ -88,6 +97,7 @@
                 </li>
 
             </ol>
+            <hr   />
             <ol class="list-group list-group-numbered">
 
                 <li class="list-group-item fondoLista" >
@@ -98,6 +108,7 @@
                 </li>
 
             </ol>
+            <hr   />
             <ol class="list-group list-group-numbered">
 
                 <li class="list-group-item fondoLista" >
@@ -108,6 +119,7 @@
                 </li>
 
             </ol>
+            <hr   />
             <ol class="list-group list-group-numbered">
 
                 <li class="list-group-item fondoLista" >
@@ -118,6 +130,7 @@
                 </li>
 
             </ol>
+            <hr   />
             <ol class="list-group list-group-numbered">
 
                 <li class="list-group-item fondoLista" >
@@ -128,6 +141,7 @@
                 </li>
 
             </ol>
+            <hr   />
             <ol class="list-group list-group-numbered">
 
                 <li class="list-group-item fondoLista" >
@@ -138,6 +152,7 @@
                 </li>
 
             </ol>
+            <hr   />
             <ol class="list-group list-group-numbered">
 
                 <li class="list-group-item fondoLista" >
@@ -159,5 +174,5 @@
     <br>
 </div>
 <br>
-<p> Creado por Sergio Galán </p>
+<p> Created by Sergio Galán </p>
 
