--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
  body{
-   background-image: url('../../StarPub/src/assets/imgs/fondo6.jpg');
+   background-image: url('../../StarPub/src/assets/imgs/redblac.png');
    background-repeat: no-repeat;
     /* background-attachment: fixed; */
     background-size: cover;
